// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> Should not add a repeated category 1`] = `
<div>
  <h1>
    GifExpertApp
  </h1>
  <form
    aria-label="form"
  >
    <input
      placeholder="Search gifs"
      type="text"
      value=""
    />
  </form>
  <h3>
    Gravity Falls
  </h3>
  <h2>
    Loading...
  </h2>
  <div
    class="card-grid"
  />
</div>
`;

exports[`Pruebas en <GifExpertApp /> should add new categories 1`] = `
<div>
  <h1>
    GifExpertApp
  </h1>
  <form
    aria-label="form"
  >
    <input
      placeholder="Search gifs"
      type="text"
      value=""
    />
  </form>
  <h3>
    Gravity Falls3
  </h3>
  <h2>
    Loading...
  </h2>
  <div
    class="card-grid"
  />
  <h3>
    Gravity Falls2
  </h3>
  <h2>
    Loading...
  </h2>
  <div
    class="card-grid"
  />
  <h3>
    Gravity Falls
  </h3>
  <h2>
    Loading...
  </h2>
  <div
    class="card-grid"
  />
</div>
`;
